# pi_epaule

./: .gitignore  .pyrightconfig.json  atlas.py  avatar.py  main.py  other_pain.py  pain_intensity.py  pain_localization.py  pain_type.py  palpation.py  patient_identification.py  pyproject.toml  readme.md  report_creator.py  ruff.toml  toaster.py  video_source.py
docs/: protocol.md
drafts/: camera.py
report_template/: conf.typ  main.typ
