[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pyqt-toast-notification>=1.3.3",
    "pyqt6>=6.9.0",
    "pyqtdarktheme>=2.1.0",
    "requests>=2.32.3",
    "typst>=0.13.2",
    "ultralytics>=8.3.146",
]
